framework/contracts/account/manager/tests/snapshots/subaccount__sub_account_move_ownership_to_sub_account-f_Q5Ã@G¹ø3p6#KÚ±Ô2òÿ~a«ø.snap
---
source: contracts/account/manager/tests/subaccount.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 0
    - 123
    - 53
    - 125
    - 115
    - 116
    - 97
    - 116
    - 101
  - - 123
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 115
    - 34
    - 58
    - 91
    - 34
    - 195
    - 142
    - 195
    - 137
    - 194
    - 169
    - 195
    - 139
    - 120
    - 116
    - 194
    - 158
    - 194
    - 143
    - 194
    - 181
    - 195
    - 153
    - 194
    - 171
    - 90
    - 195
    - 189
    - 195
    - 155
    - 105
    - 194
    - 133
    - 74
    - 106
    - 54
    - 92
    - 98
    - 194
    - 131
    - 194
    - 168
    - 195
    - 169
    - 65
    - 194
    - 132
    - 195
    - 153
    - 74
    - 195
    - 151
    - 92
    - 117
    - 48
    - 48
    - 48
    - 54
    - 97
    - 82
    - 195
    - 137
    - 34
    - 93
    - 125
- - - 0
    - 123
    - 54
    - 125
    - 97
    - 110
    - 115
    - 95
    - 104
    - 111
    - 115
    - 116
  - - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 48
    - 34
    - 125
- - - 97
    - 99
    - 99
    - 95
    - 105
    - 100
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 52
    - 125
- - - 97
    - 100
    - 109
    - 105
    - 110
  - - 34
    - 195
    - 142
    - 195
    - 137
    - 194
    - 169
    - 195
    - 139
    - 120
    - 116
    - 194
    - 158
    - 194
    - 143
    - 194
    - 181
    - 195
    - 153
    - 194
    - 171
    - 90
    - 195
    - 189
    - 195
    - 155
    - 105
    - 194
    - 133
    - 74
    - 106
    - 54
    - 92
    - 98
    - 194
    - 131
    - 194
    - 168
    - 195
    - 169
    - 65
    - 194
    - 132
    - 195
    - 153
    - 74
    - 195
    - 151
    - 92
    - 117
    - 48
    - 48
    - 48
    - 54
    - 97
    - 82
    - 195
    - 137
    - 34
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 112
    - 114
    - 111
    - 120
    - 121
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125

